--- a/package.json
+++ b/package.json
@@ -31,8 +31,11 @@
         "clsx": "^2.1.1",
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^2.0.0",
-        "tailwind-merge": "^3.2.0",
+        "lucide-vue-next": "^0.542.0",
+        "reka-ui": "^2.5.0",
+        "tailwind-merge": "^3.3.1",
         "tailwindcss": "^4.1.1",
+        "tw-animate-css": "^1.3.7",
         "typescript": "^5.2.2",
         "vite": "^7.0.4",
         "vue": "^3.5.13",
