--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "clsx": "^2.1.1",
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^2.0.0",
+        "lucide-vue-next": "^0.546.0",
         "reka-ui": "^2.5.1",
         "tailwind-merge": "^3.3.1",
         "tailwindcss": "^4.1.13",
